--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
 
 <body>
     <div class="wrapper">
-        <ul>
-            <li><span class="remove">Element 1</span></li>
-            <li><span class="remove">Element 2</span></li>
-            <li><span class="remove">Element 3</span></li>
-            <li><span class="remove">Element 4</span></li>
-            <li><span class="remove">Element 5</span></li>
-        </ul>
+        <form id="list-of-elements">
+            <ul>
+                <li><span class="remove">Element 1</span></li>
+                <li><span class="remove">Element 2</span></li>
+                <li><span class="remove">Element 3</span></li>
+                <li><span class="remove">Element 4</span></li>
+                <li><span class="remove">Element 5</span></li>
+            </ul>
+            <input type="text"><button>Add Element</button>
+        </form>
     </div>
 </body>
 <script src="js/main.js"></script>
