--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <div class="wrapper">
+        <input type="text" placeholder="search">
         <form id="list-of-elements">
             <ul>
                 <li><span class="remove">Element 1</span></li>
