fixed selection errors

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
 
 <body>
     <div class="wrapper">
-        <input type="text" placeholder="search">
+        <input id="searchbar" type="text" placeholder="search">
         <form id="list-of-elements">
             <ul>
-                <li><span class="remove">Element 1</span></li>
-                <li><span class="remove">Element 2</span></li>
-                <li><span class="remove">Element 3</span></li>
-                <li><span class="remove">Element 4</span></li>
-                <li><span class="remove">Element 5</span></li>
+                <li><span class="remove">Grape 1</span></li>
+                <li><span class="remove">Apple 2</span></li>
+                <li><span class="remove">Banana 3</span></li>
+                <li><span class="remove">Blackberry 4</span></li>
+                <li><span class="remove">Orange 4</span></li>
+                <li><span class="remove">Strawberry 5</span></li>
             </ul>
-            <input type="text"><button>Add Element</button>
+            <input id="element-adder" type="text"><button>Add Element</button>
         </form>
     </div>
 </body>
